<resources>
    <string name="app_name">Info QR</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">WELCOME TO InfoQR</string>
    <string name="infoqr">INFO QR</string>
    <string name="developer">From DevWings</string>
    <string name="before_scan">Point on a QR</string>
    <string name="user_on_scan">User Details</string>
    <string name="report_a_bug_scan">Report a Bug</string>
    <string name="generate_qr_scan">Generate QR</string>
    <string name="recent_scans_scan_activity">Add Record</string>
    <string name="cutebugimage">cuteBugImage</string>
    <string name="quote">One of the basic rules of the universe is that nothing is perfect</string>
    <string name="top_bar_colored">top_bar_colored</string>
    <string name="bottom_bar_colored">bottom_bar_colored</string>
    <string name="to_email">To:</string>
    <string name="send_btn">Send to Developer</string>
    <string name="err_desc">Error Description:</string>
    <string name="dev_email">spandansaxena@gmail.com</string>
    <string name="sub_line">Bug in the App InfoQR</string>
    <string name="subject">Subject:</string>
    <string name="copyright">Copyright © 2020 DevWings</string>
    <string name="fetch">Fetch</string>
    <string name="save">Save</string>
    <string name="add">ADD</string>
    <string name="equip_id">Enter Equipment ID Here</string>
    <string name="equip_name">Enter Equipment Name</string>
    <string name="equip_date">Enter Last Service Date</string>
    <string name="add_record">Add Record</string>
    <string name="usr_name">TextView</string>
    <string name="usr_email">TextView</string>
</resources>


    <!--
      _____           __          ___
     |  __ \          \ \        / (_)
     | |  | | _____   _\ \  /\  / / _ _ __   __ _ ___
     | |  | |/ _ \ \ / /\ \/  \/ / | | '_ \ / _` / __|
     | |__| |  __/\ V /  \  /\  /  | | | | | (_| \__ \
     |_____/ \___| \_/    \/  \/   |_|_| |_|\__, |___/
                                             __/ |
                                            |___/
    -->
