<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context=".Scan_Activity">


    <SurfaceView
        android:id="@+id/camerapreview"
        android:layout_width="416dp"
        android:layout_height="594dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="397dp"
        android:layout_height="49dp"
        android:layout_marginBottom="76dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:clickable="true"
        android:contextClickable="true"
        android:editable="false"
        android:enabled="true"
        android:focusable="true"
        android:fontFamily="@font/google_sans"
        android:linksClickable="true"
        android:longClickable="true"
        android:onClick="grasp"
        android:text="@string/before_scan"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textIsSelectable="true"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />


    <Button
        android:id="@+id/button5"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/allerta"
        android:text="@string/user_on_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/man_updt"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/allerta"
        android:text="@string/add_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/allerta"
        android:text="@string/report_a_bug_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="83dp"
        android:layout_height="58dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/allerta"
        android:text="@string/generate_qr_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refocus"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:clickable="true"
        android:foreground="@drawable/refocus"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@drawable/refocus"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>


    <!--
      _____           __          ___
     |  __ \          \ \        / (_)
     | |  | | _____   _\ \  /\  / / _ _ __   __ _ ___
     | |  | |/ _ \ \ / /\ \/  \/ / | | '_ \ / _` / __|
     | |__| |  __/\ V /  \  /\  /  | | | | | (_| \__ \
     |_____/ \___| \_/    \/  \/   |_|_| |_|\__, |___/
                                             __/ |
                                            |___/
    -->
